# regression-based-attribution-demo

./: .gitignore  README.md  pyproject.toml
config/: attribution.yml
data/sample/: sample_daily.csv
notebooks/: 01_data_audit.ipynb  02_feature_engineering.ipynb  03_model_fit.ipynb  04_attribution_outputs.ipynb  05_sensitivity.ipynb
src/attrib_regression/: __init__.py  cli.py  config.py  io.py  preprocess.py  validation.py
src/attrib_regression/attribution/: decompose.py  roi.py
src/attrib_regression/eval/: tscv.py
src/attrib_regression/features/: adstock.py  build_matrix.py  saturation.py
src/attrib_regression/models/: diagnostics.py  train.py
src/attrib_regression/viz/: plots.py
tests/: test_adstock.py  test_decompose.py  test_saturation.py  test_tscv.py  test_validation.py
